2005-02-25  Adam Fedor  <fedor@gnu.org>

	* Version 1.1.0:
	* GNUmakefile: Add version.
	* README: Add ftp location.

Sat Feb 19 04:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* Makefile: Build two versions of each bundle with different library
	linkage for systems where dybnamic linker symbol visibility differs.
	* SQLClient.m: Try alternative bundle versions.

Mon Jan 07 15:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* Makefile: Bump version.
	* SQLClient.h: Improve documentation.

Sat Dec 18 06:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Fix bug in substitution of nil values into templates.
	Add new method to vend static pages.

Wed Dec 15 13:10:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* MySQL.m, Postgres.m, ECPG.pgm: Do NSLog() logging of field
	information only when debug level is greater than 1.

Fri Dec 10 10:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Remove unnecessary libraries from link commands for
	bundles.  On Darwin, specifying these leads to multiply defined
	symbols when an executable attempts to load the bundle.

Fri Nov 19 14:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: parse basic authentication infor and set it in extra
	headers in request.
	* WebServerBundles.m: support handling of paths longer than the
	ones set for each bundle.

Tue Nov 11 14:48:05 2004  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile (BUNDLE_INSTALL_DIR): install bundles in
	GNUSTEP_INSTALLATION_DIR, not GNUSTEP_LOCAL_ROOT.

Tue Nov 09 10:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.hm: add ([-append:]) method to merge transactions.

Thu Oct 28 08:45:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* WebServer.m: Don't generate alert about connection with empty
	request if we have lready handled a request and reset.

Tue Oct 26 16:50:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>

	* SQLClient.m: debug and duration logging should be turned off